style.css
html, body {
  margin: 0;
  padding: 0;
  background-color: black;
  color: white;
  scrollbar-color: white black;
}

yl-navbar {
  box-shadow: 0px 0px 50px 40px #000000;
}

yl-navbar::part(icon) {
  margin: 16px;
}

yl-navbar::part(links) {
  margin: 0px 32px;
}

yl-navbar a {
  margin: 8px;
  color: white;   
  text-decoration: none;
}

yl-grid {
  max-width: 900px;
}

yl-tile {
  margin: 32px;
}

yl-tile::part(image) {
  width: 200px;
  border: 1px solid white;
}

yl-footer {
  box-shadow: 0px 0px 50px 40px #000000;
}

yl-footer::part(hr) {
  width: 400px;
  background: #000000;
  background: linear-gradient(90deg,
    black 0%,
    white 25%,
    white 75%,
    black 100%);
}

yl-footer yl-icon {
  height: 32px;
  margin: 16px 32px;
}

yl-modal::part(container) {
  background-color: black;
  border: 1px solid white;
  width: 1000px;
  height: 800px;
}

yl-modal::part(background) {
  background-color: #00000080
}

yl-modal::part(closeButton) {
  font-size: 20px;
}

yl-modal yl-imageview {
  border-top: 1px solid white;
  border-bottom: 1px solid white;
}

yl-modal h3 {
  margin: 0.5em;
}

yl-modal p, yl-modal a {
  margin-left: 1em;
}

